#25 FRONTEND: Fixed the spacing between input box in login and signup page

--- a/backend/api/core/static/style.css
+++ b/backend/api/core/static/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: PT Serif;
     background-color: #00001c;
-    color: #D9D9D9;
+    /* color: #D9D9D9; */
   }
 
   /* For login page */
@@ -38,10 +38,10 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom:-20px;
+    margin: 30px auto;
   }
 
-  /* input{
+  /* .log{
     width: 100%;
     height: 40px;
     background: #ffffff;
@@ -56,7 +56,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top:70px;
+    margin-top:90px;
   }
 
   .button1{
@@ -91,6 +91,7 @@ body{
   .account{
     position:absolute;
     bottom:0px;
+    color:#00001c
   }
 
    /* For Sign Up page */
@@ -113,7 +114,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom:-30px;
+    margin: 30px auto;
   }
 
   .signup-button{
